--- a/locales/ru.json
+++ b/locales/ru.json
@@ -4,7 +4,7 @@
     "ABOUT": "О нас",
     "PERSON": "Врачи",
     "SERVICE": "Услуги",
-    "OUR_WORKS": "Примеры работ",
+    "OUR_WORKS": "Наши работы",
     "NEWS": "Новости",
     "SOCIAL": "Мы в соц. сетях"
   }
