--- a/locales/kg.json
+++ b/locales/kg.json
@@ -6,6 +6,14 @@
     "SERVICE": "Кызматтар",
     "OUR_WORKS": "Биздин жумуштар",
     "NEWS": "Жанылыктар",
-    "SOCIAL": "Биз соц тармактардабыз."
+    "SOCIAL": "Биз соц тармактардабыз.",
+    "BUTTON": "Жазылуу"
+  },
+  "MAIN": {
+    "DESC": "Пластикалык калыбына келтирүү жана эстетикалык хирургия",
+    "YEAR": "ЖЫЛ",
+    "PERIOD": "МИҢ",
+    "BUTTON": "Кененирээк маалымат",
+    "DESC_SUB": "бейтаптар арасында кынтыксыз кадыр-баркта"
   }
 }
