--- a/locales/ru.json
+++ b/locales/ru.json
@@ -6,6 +6,14 @@
     "SERVICE": "Услуги",
     "OUR_WORKS": "Наши работы",
     "NEWS": "Новости",
-    "SOCIAL": "Мы в соц. сетях"
+    "SOCIAL": "Мы в соц. сетях",
+    "BUTTON": "Записаться"
+  },
+  "MAIN": {
+    "DESC": "Пластическая реконструктивная и эстетическая хирургия",
+    "YEAR": "ГОД",
+    "PERIOD": "ТЫС",
+    "BUTTON": "Подробнее",
+    "DESC_SUB": "безупречная репутация среди пациентов"
   }
 }
