--- a/locales/kg.json
+++ b/locales/kg.json
@@ -14,6 +14,7 @@
     "YEAR": "ЖЫЛ",
     "PERIOD": "МИҢ",
     "BUTTON": "Кененирээк маалымат",
-    "DESC_SUB": "бейтаптар арасында кынтыксыз кадыр-баркта"
+    "DESC_SUB": "бейтаптар арасында кынтыксыз кадыр-баркта",
+    "MOBILE_DESC": "20 жылдан ашык тажрыйбасы жана 10 000ден ашуун ийгиликтүү операциялары бар сулуулук жаратуучулар. Ар бир процедурада жогорку сапат жана кесипкөйлүк"
   }
 }
