--- a/locales/ru.json
+++ b/locales/ru.json
@@ -14,6 +14,7 @@
     "YEAR": "ГОД",
     "PERIOD": "ТЫС",
     "BUTTON": "Подробнее",
-    "DESC_SUB": "безупречная репутация среди пациентов"
+    "DESC_SUB": "безупречная репутация среди пациентов",
+    "MOBILE_DESC": "Создатели красоты с более чем 20-летним опытом и более 10,000 успешных операций. Высокое качество и профессионализм в каждой процедуре"
   }
 }
