--- a/locales/tr.json
+++ b/locales/tr.json
@@ -14,6 +14,7 @@
     "YEAR": "YIL",
     "PERIOD": "BİN",
     "BUTTON": "Daha",
-    "DESC_SUB": "hastalar arasında mükemmel itibar"
+    "DESC_SUB": "hastalar arasında mükemmel itibar",
+    "MOBILE_DESC": "Güzellik yaratıcıları 20 yılı aşkın deneyime ve 10.000'den fazla başarılı ameliyata sahiptir. Her prosedürde yüksek kalite ve profesyonellik"
   }
 }
