--- a/locales/kg.json
+++ b/locales/kg.json
@@ -16,5 +16,20 @@
     "BUTTON": "Кененирээк маалымат",
     "DESC_SUB": "бейтаптар арасында кынтыксыз кадыр-баркта",
     "MOBILE_DESC": "20 жылдан ашык тажрыйбасы жана 10 000ден ашуун ийгиликтүү операциялары бар сулуулук жаратуучулар. Ар бир процедурада жогорку сапат жана кесипкөйлүк"
+  },
+  "ABOUT": {
+    "TITLE": "Биздин клиника жөнүндө:"
+  },
+  "FOOTER": {
+    "CONTACT": "БИЗДИН НОМЕРЛЕРИБИЗ",
+    "NAVIGATION": "НАВИГАЦИЯ",
+    "MAIN": "Башкы",
+    "ABOUT": "Биз жөнүндө",
+    "PERSON": "Дарыгерлер",
+    "SERVICE": "Кызматтар",
+    "OUR_WORKS": "Биздин жумуштар",
+    "NEWS": "Жанылыктар",
+    "SOCIAL": "Биз соц тармактардабыз.",
+    "SCHEDULE": "ИШ УБАКТЫСЫ"
   }
 }
