--- a/locales/ru.json
+++ b/locales/ru.json
@@ -16,5 +16,20 @@
     "BUTTON": "Подробнее",
     "DESC_SUB": "безупречная репутация среди пациентов",
     "MOBILE_DESC": "Создатели красоты с более чем 20-летним опытом и более 10,000 успешных операций. Высокое качество и профессионализм в каждой процедуре"
+  },
+  "ABOUT": {
+    "TITLE": "О нашей кл﻿инике:"
+  },
+  "FOOTER": {
+    "CONTACT": "НАШИ НОМЕРА",
+    "NAVIGATION": "НАВИГАЦИЯ",
+    "MAIN": "Главный",
+    "ABOUT": "О нас",
+    "PERSON": "Врачи",
+    "SERVICE": "Услуги",
+    "OUR_WORKS": "Наши работы",
+    "NEWS": "Новости",
+    "SOCIAL": "Мы в соц. сетях",
+    "SCHEDULE": "ВРЕМЯ РАБОТЫ"
   }
 }
